# ecvl

./: .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  DEVSTAT.md  Dockerfile  Jenkinsfile  PROGRESS.md  README.md  _formulas.tex  arithmetic_8cpp.html  arithmetic__impl_8h.html  arithmetic__impl_8inc_8h_source.html  class_sample-members.html  class_sample.html  classecvl_1_1_aug_additive_laplace_noise-members.html  classecvl_1_1_aug_additive_poisson_noise.html  classecvl_1_1_aug_gaussian_blur.html  classecvl_1_1_aug_mirror.html  classecvl_1_1_aug_rotate-members.html  classecvl_1_1_augmentation.html  classecvl_1_1_augmentation_param.html  classecvl_1_1_image-members.html  classecvl_1_1_sequential_augmentation_container-members.html  classecvl_1_1_show3_d_app-members.html  codecov.yml  datatype__existing__tuples_8inc_source.html  datatype__existing__tuples__signed_8inc_8h_source.html  datatype__tuples_8inc.html  dir_9f3ad9a1524314fca38ded06daae9f54.html  eddl_8h.html  environment.yml  example_ecvl_gui_8cpp-example.html  functions_func_a.html  functions_func_p.html  functions_n.html  functions_t.html  gui3_d_8cpp_source.html  (+41 more)
.github/workflows/: linux.yml  macos.yml  windows.yml
3party/: CMakeLists.txt
ci/: deps.sh
ci/travis/: cmake.sh  eddl.sh  opencv.sh
cmake/: ECVLConfig.cmake.in  ecvlConfig.cmake.in
doc/doxygen/: Doxyfile  Doxyfile_LaTeX  Image introduction and explanation.docx  doxygen.sty  header.html  latex_doc_gen.bat  license.txt  pdftk.txt  references.bib  ~$age introduction and explanation.docx
doc/html/: annotated.html  class_default_memory_manager-members.html  class_default_memory_manager.html  class_memory_manager-members.html  class_memory_manager.html  class_shallow_memory_manager-members.html  class_shallow_memory_manager.html  classecvl_1_1_image-members.html  classecvl_1_1_image.html  classecvl_1_1_img-members.html  classecvl_1_1_img.html  classecvl_1_1_meta_data-members.html  classecvl_1_1_meta_data.html  classes.html  classfilesystem_1_1path-members.html  classfilesystem_1_1path.html  core_8cpp.html  core_8cpp_source.html  core_8h.html  core_8h_source.html  datatype_8cpp.html  datatype_8cpp_source.html  datatype_8h.html  datatype_8h_source.html  datatype__tuples_8inc.html  datatype__tuples_8inc_source.html  files.html  filesystem_8cc.html  filesystem_8cc_source.html  filesystem_8h.html  filesystem_8h_source.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  imgcodecs_8cpp.html  imgcodecs_8cpp_source.html  (+22 more)
doc/latex/: DEEPHEALTH_doxygen_logo_reduced.psd  class_default_memory_manager.eps  class_default_memory_manager.tex  class_memory_manager.eps  class_memory_manager.tex  class_shallow_memory_manager.eps  class_shallow_memory_manager.tex  classecvl_1_1_image.tex  classecvl_1_1_img.eps  classecvl_1_1_img.tex  classecvl_1_1_meta_data.tex  (+18 more)
examples/: CMakeLists.txt  example_core_iterators.cpp  example_dataset.cpp  example_dataset_generator.cpp  example_dataset_parser.cpp  example_ecvl_eddl.cpp  example_ecvl_gui.cpp  example_image_view.cpp  example_imagewatch.cpp  example_imgcodecs.cpp  example_imgproc.cpp  example_moments.cpp  example_nifti_dicom.cpp  example_openslide.cpp  example_performance.cpp  example_pipeline.cpp  example_pipeline_UC12_omp.cpp  example_pipeline_omp.cpp  example_threshold.cpp  main.cpp
kernels/: CMakeLists.txt  filter2d_accel.cpp  flipvertical_accel.cpp  gamma_correction_accel.cpp  gaussian_accel.cpp  gray2rgb_accel.cpp  histogram_accel.cpp  integral_image_accel.cpp  min_max_loc_accel.cpp  mirror_accel.cpp  otsuThreshold_accel.cpp  remap_accel.cpp  resize_accel.cpp  rgb2gray_accel.cpp  threshold_accel.cpp  warpTransform_accel.cpp
master/: annotated.html  any_8h_source.html  arithmetic_8cpp.html  arithmetic_8cpp_source.html  arithmetic_8h.html  arithmetic_8h_source.html  arithmetic__impl_8h_source.html  arithmetic__impl_8inc_8h.html  arithmetic__impl_8inc_8h_source.html  augmentations_8cpp.html  augmentations_8cpp_source.html  augmentations_8h.html  augmentations_8h_source.html  citelist.html  class_dataset.html  class_default_memory_manager-members.html  class_default_memory_manager.html  class_shallow_memory_manager-members.html  class_split-members.html  class_split.html  classecvl_1_1_aug_additive_laplace_noise-members.html  classecvl_1_1_aug_additive_laplace_noise.html  classecvl_1_1_aug_additive_poisson_noise-members.html  classecvl_1_1_aug_additive_poisson_noise.html  classecvl_1_1_aug_brightness.html  classecvl_1_1_aug_center_crop-members.html  classecvl_1_1_aug_center_crop.html  classecvl_1_1_aug_coarse_dropout-members.html  classecvl_1_1_aug_coarse_dropout.html  classecvl_1_1_aug_div_by255.html  classecvl_1_1_aug_elastic_transform.html  classecvl_1_1_aug_flip-members.html  classecvl_1_1_aug_flip.html  classecvl_1_1_aug_gamma_contrast-members.html  classecvl_1_1_aug_gamma_contrast.html  classecvl_1_1_aug_gaussian_blur-members.html  classecvl_1_1_aug_gaussian_blur.html  classecvl_1_1_aug_grid_distortion.html  classecvl_1_1_aug_mirror-members.html  classecvl_1_1_aug_mirror.html  (+349 more)
modules/dataset_parser/: CMakeLists.txt  dataset.yaml
modules/dataset_parser/include/ecvl/: CMakeLists.txt  dataset_parser.h
modules/dataset_parser/src/: CMakeLists.txt  dataset_parser.cpp
modules/dataset_parser/test/: CMakeLists.txt  test_dataset_parser.cpp
search/: all_0.js  all_14.js  all_15.js  all_9.js  all_d.js  classes_3.js  defines_3.js  defines_6.js  files_0.js  files_8.js  functions_4.js  functions_8.js  namespaces_1.js  variables_2.js  variables_9.js  variables_b.js
snippets/: CMakeLists.txt  core_iterators.cpp  imgcodecs_imwrite.cpp  test_imagewatch.cpp
spike/: operators_lazy_evaluation.cpp
src/: CMakeLists.txt  core.cpp  core.h  datatype.cpp  datatype.h  datatype_existing_tuples.inc  datatype_tuples.inc  filesystem.cc  imgcodecs.cpp  imgcodecs.h  imgproc.cpp  imgproc.h  iterators.h  iterators_impl.h  support_opencv.cpp  support_opencv.h
tools/: ECVL.natvis  ECVL.natvis.txt  prepare_release.py
(+1714 files in other folders)
